fisrt deploy to the app v.1.0.0 try 4 adjusting images

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -503,10 +503,10 @@ footer h5 {
       max-width: 100%;
    }
 
-   .relateproducts .product-img {
+   .contproduct .product-img {
       margin: auto;
       min-height: 160px;
-      max-height: 10rem;
+      max-height: 12rem;
       max-width: auto;
       margin-bottom: 1rem;
    }
