--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -506,7 +506,7 @@ footer h5 {
    .contproduct .product-img {
       margin: auto;
       min-height: 160px;
-      max-height: 25rem;
+      max-height: 30rem;
       max-width: auto;
       margin-bottom: 1rem;
    }
@@ -543,11 +543,19 @@ footer h5 {
 
    }
 
+   .relateproducts .product-img {
+      margin: auto;
+      min-height: 160px;
+      max-height: 10rem;
+      max-width: auto;
+      margin-bottom: 1rem;
+   }
+
 
    .cart .product-img {
       margin: auto;
       min-height: 160px;
-      max-height: 25rem;
+      max-height: 30rem;
       max-width: auto;
       margin-bottom: 1rem;
    }
